@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-11-28 Gal
+ PATCH: [ 1603769 ] Send MergeCmdLineInfo between instances
+  Src: MainFrm.cpp Merge.cpp MergeCmdLineInfo.cpp MergeCmdLineInfo.h
+
 2006-11-27 Kimmo
  BUG: [ 1602214 ] Incorrect work with associated files in WinMerge 2.7.1.2
   Src: Merge.cpp
